--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,133 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@media print {
+  body {
+    print-color-adjust: exact;
+    -webkit-print-color-adjust: exact;
+    margin: 0px;
   }
 }
 
-* {
+@page {
+  margin: 25mm 25mm 25mm 25mm;
+}
+
+@font-face {
+    font-family: 'Bookman Headline';
+    src: url('/bookman_headline_regular.otf') format('opentype');
+}
+
+div {
+  display: block;
+  font-family: 'Arial';
+}
+
+.myCard {
+  background-color: #000;
+  width: 2.5in;
+  min-width: 2.5in;
+  height: 3.5in;
+  padding: 10px 10px 0px 10px;
+  margin: 0 1px 1px 0;
+  float: left;
   box-sizing: border-box;
-  padding: 0;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  page-break-inside: avoid;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
+img {
+  align-self: center;
+}
+
+.myBody {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.myTitle {
+  border-bottom: 2px solid #000;
+  color: black;
   margin: 0;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  padding-bottom: 2px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.separatorText {
+  color: white;
+  font-weight: bold;
+  font-size: 10px;
+  background-color: #000;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.myBottom {
+  min-height: 25px;
+  font-size: 10px;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.myRight {
+  text-align: right;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.myLeft {
+  text-align: left;
+}
+
+.keyValueLine {
+  border-bottom: 2px solid #000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.keyValueColumn {
+  width: 50%;
+  padding: 2px;
+}
+
+.keyValueColumnHeader {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
+}
+
+.keyValueColumnValue {
+  text-align: center;
+  font-size: 10px;
+}
+
+.keyValueSeparator {
+  min-width: 2px;
+  background-color: #000;
+}
+
+.myText {
+  text-align: justify;
+  font-size: 9.5px;
+  line-height: 10px;
+  padding: 2px;
+}
+
+.cardlist {
+  width: 21cm;
+  margin: 0 auto;
+  padding: 5mm 9mm;
+  margin: 5mm auto;
 }
