--- a/app/Sheet/sheet.module.css
+++ b/app/Sheet/sheet.module.css
@@ -1,4 +1,3 @@
-
 .absolute {
   position: absolute;
 }
@@ -10,11 +9,17 @@
 .sheet {
   position: absolute;
   width: 210mm;
+  height: 297mm;
+  page-break-after: always;
 }
 
 .text {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+}
+
+.rules_text {
+  font-family: 'Bookman Headline';
 }
 
 .text13 {
@@ -39,4 +44,10 @@
 
 .text6 {
   font-size: 6pt;
+}
+
+.text_link {
+  text-decoration: underline;
+  color: darkblue;
+  cursor: pointer;
 }
